<resources>
    <string name="app_name">Smart Station</string>
    <string name="chat">Chat</string>
    <string name="email">Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_mobile_num">Enter your phone number</string>
    <string name="login_sub">Smart Station will verify\nyour phone number.</string>
    <string name="mobile_num">Mobile number</string>
    <string name="login">Login</string>
    <string name="please_select_country">Please select your country</string>
    <string name="please_enter_mobile">Please enter your mobile number</string>
    <string name="please_enter_valid_mobile">Please enter valid mobile</string>
    <string name="enter_code">Enter code sent to your phone</string>
    <string name="otp_sub">Waiting to automatically detect an SMS sent to</string>
    <string name="wrong_number">Wrong number?</string>
    <string name="submit">Submit</string>
    <string name="if_you_didn_t_receive_code">If you didn\'t receive code? Resend</string>
    <string name="resend">Resend</string>
    <string name="fill_otp_err">Fill the otp values</string>
    <string name="otp_err">Please enter valid OTP</string>
    <string name="offz">Office</string>
    <string name="home">Home</string>
    <string name="please_select_role">Please select account type</string>
    <string name="profile">Profile</string>
    <string name="profile_pht">Profile Photos</string>
    <string name="name">Name</string>
    <string name="company_name">Company name</string>
    <string name="company_details">Company Details</string>
    <string name="ceo">CEO or Owner name</string>
    <string name="company_add">Company address</string>
    <string name="please_ceo">Please enter name</string>
    <string name="please_upload_sign">Please choose image</string>
    <string name="please_name_min">Name atleast 3 letters</string>
    <string name="please_company">Please enter company name</string>
    <string name="please_company_address">Please enter company Email ID</string>
    <string name="call">Call</string>
    <string name="no_found">Not Found</string>
    <string name="no_inbox">No Inbox</string>
    <string name="no_signature">No Signature</string>
    <string name="no_sendbox">No Sentbox</string>
    <string name="no_sendbox_letter">No Sentbox Letter</string>
    <string name="no_chat_found">No Chats</string>
    <string name="no_letter_found">No letter found</string>
    <string name="type_your_message">Type a message</string>
    <string name="welcome_to_smart_station">Welcome to\nSmart Station</string>
    <string name="terms">Read our Privacy Policy. Tap \"Get Started\"\nto accept the Terms of Service.</string>
    <string name="get_started">Get Started</string>
    <string name="choose_country">Choose a country</string>
    <string name="country_afghanistan_name">Afghanistan</string>
    <string name="country_afghanistan_code" translatable="false">af</string>
    <string name="country_afghanistan_number" translatable="false">93</string>
    <string name="country_aland_islands_name">Åland Islands</string>
    <string name="country_aland_islands_code" translatable="false">ax</string>
    <string name="country_aland_islands_number" translatable="false">358</string>
    <string name="country_albania_name">Albania</string>
    <string name="country_albania_code" translatable="false">al</string>
    <string name="country_albania_number" translatable="false">355</string>
    <string name="country_algeria_name">Algeria</string>
    <string name="country_algeria_code" translatable="false">dz</string>
    <string name="country_algeria_number" translatable="false">213</string>
    <string name="country_american_samoa_name">American Samoa</string>
    <string name="country_american_samoa_code" translatable="false">as</string>
    <string name="country_american_samoa_number" translatable="false">1684</string>
    <string name="country_andorra_name">Andorra</string>
    <string name="country_andorra_code" translatable="false">ad</string>
    <string name="country_andorra_number" translatable="false">376</string>
    <string name="country_angola_name">Angola</string>
    <string name="country_angola_code" translatable="false">ao</string>
    <string name="country_angola_number" translatable="false">244</string>
    <string name="country_anguilla_name">Anguilla</string>
    <string name="country_anguilla_code" translatable="false">ai</string>
    <string name="country_anguilla_number" translatable="false">1264</string>
    <string name="country_antarctica_name">Antarctica</string>
    <string name="country_antarctica_code" translatable="false">aq</string>
    <string name="country_antarctica_number" translatable="false">672</string>
    <string name="country_antigua_and_barbuda_name">Antigua and Barbuda</string>
    <string name="country_antigua_and_barbuda_code" translatable="false">ag</string>
    <string name="country_antigua_and_barbuda_number" translatable="false">1268</string>
    <string name="country_argentina_name">Argentina</string>
    <string name="country_argentina_code" translatable="false">ar</string>
    <string name="country_argentina_number" translatable="false">54</string>
    <string name="country_armenia_name">Armenia</string>
    <string name="country_armenia_code" translatable="false">am</string>
    <string name="country_armenia_number" translatable="false">374</string>
    <string name="country_aruba_name">Aruba</string>
    <string name="country_aruba_code" translatable="false">aw</string>
    <string name="country_aruba_number" translatable="false">297</string>
    <string name="country_australia_name">Australia</string>
    <string name="country_australia_code" translatable="false">au</string>
    <string name="country_australia_number" translatable="false">61</string>
    <string name="country_austria_name">Austria</string>
    <string name="country_austria_code" translatable="false">at</string>
    <string name="country_austria_number" translatable="false">43</string>
    <string name="country_azerbaijan_name">Azerbaijan</string>
    <string name="country_azerbaijan_code" translatable="false">az</string>
    <string name="country_azerbaijan_number" translatable="false">994</string>
    <string name="country_bahamas_name">Bahamas</string>
    <string name="country_bahamas_code" translatable="false">bs</string>
    <string name="country_bahamas_number" translatable="false">1242</string>
    <string name="country_bahrain_name">Bahrain</string>
    <string name="country_bahrain_code" translatable="false">bh</string>
    <string name="country_bahrain_number" translatable="false">973</string>
    <string name="country_bangladesh_name">Bangladesh</string>
    <string name="country_bangladesh_code" translatable="false">bd</string>
    <string name="country_bangladesh_number" translatable="false">880</string>
    <string name="country_barbados_name">Barbados</string>
    <string name="country_barbados_code" translatable="false">bb</string>
    <string name="country_barbados_number" translatable="false">1246</string>
    <string name="country_belarus_name">Belarus</string>
    <string name="country_belarus_code" translatable="false">by</string>
    <string name="country_belarus_number" translatable="false">375</string>
    <string name="country_belgium_name">Belgium</string>
    <string name="country_belgium_code" translatable="false">be</string>
    <string name="country_belgium_number" translatable="false">32</string>
    <string name="country_belize_name">Belize</string>
    <string name="country_belize_code" translatable="false">bz</string>
    <string name="country_belize_number" translatable="false">501</string>
    <string name="country_benin_name">Benin</string>
    <string name="country_benin_code" translatable="false">bj</string>
    <string name="country_benin_number" translatable="false">229</string>
    <string name="country_bermuda_name">Bermuda</string>
    <string name="country_bermuda_code" translatable="false">bm</string>
    <string name="country_bermuda_number" translatable="false">1441</string>
    <string name="country_bhutan_name">Bhutan</string>
    <string name="country_bhutan_code" translatable="false">bt</string>
    <string name="country_bhutan_number" translatable="false">975</string>
    <string name="country_bolivia_name">Bolivia</string>
    <string name="country_bolivia_code" translatable="false">bo</string>
    <string name="country_bolivia_number" translatable="false">591</string>
    <string name="country_bosnia_and_herzegovina_name">Bosnia And Herzegovina</string>
    <string name="country_bosnia_and_herzegovina_code" translatable="false">ba</string>
    <string name="country_bosnia_and_herzegovina_number" translatable="false">387</string>
    <string name="country_botswana_name">Botswana</string>
    <string name="country_botswana_code" translatable="false">bw</string>
    <string name="country_botswana_number" translatable="false">267</string>
    <string name="country_brazil_name">Brazil</string>
    <string name="country_brazil_code" translatable="false">br</string>
    <string name="country_brazil_number" translatable="false">55</string>
    <string name="country_british_indian_ocean_territory_name">British Indian Ocean Territory</string>
    <string name="country_british_indian_ocean_territory_code" translatable="false">io</string>
    <string name="country_british_indian_ocean_territory_number" translatable="false">246</string>
    <string name="country_british_virgin_islands_name">British Virgin Islands</string>
    <string name="country_british_virgin_islands_code" translatable="false">vg</string>
    <string name="country_british_virgin_islands_number" translatable="false">1284</string>
    <string name="country_brunei_darussalam_name">Brunei Darussalam</string>
    <string name="country_brunei_darussalam_code" translatable="false">bn</string>
    <string name="country_brunei_darussalam_number" translatable="false">673</string>
    <string name="country_bulgaria_name">Bulgaria</string>
    <string name="country_bulgaria_code" translatable="false">bg</string>
    <string name="country_bulgaria_number" translatable="false">359</string>
    <string name="country_burkina_faso_name">Burkina Faso</string>
    <string name="country_burkina_faso_code" translatable="false">bf</string>
    <string name="country_burkina_faso_number" translatable="false">226</string>
    <string name="country_burundi_name">Burundi</string>
    <string name="country_burundi_code" translatable="false">bi</string>
    <string name="you_entered_the_phn_number">You entered the phone number :</string>
    <string name="is_this_ok_or_would_you_like">Is this OK, or would you like to edit the number?</string>
    <string name="ok">OK</string>
    <string name="edit">EDIT</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="new_group">New group</string>
    <string name="star_msg">Starred message</string>
    <string name="payment">Payment</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_msg">Are you sure you want to exit?</string>
    <string name="view_contact">View Contact</string>
    <string name="media_link">Media links, and docs</string>
    <string name="search_txt">Search</string>
    <string name="mute_notify">Mute and notification</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="more">More</string>
    <string name="new_contact">New Contact</string>
    <string name="add_desc_grp">Add Group Description</string>
    <string name="grp_des">Group Description</string>
    <string name="save">Save</string>
    <string name="des_grp_1">The group description is visible to participants of this group and people invited to this group.</string>
</resources>