<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/chat_round_use"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <com.application.smartstation.view.CustomTextViewBold
            android:id="@+id/txtCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:text="@string/cancel"
            android:textColor="@color/button_blue"
            android:textSize="16sp">

        </com.application.smartstation.view.CustomTextViewBold>

        <com.application.smartstation.view.CustomTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/grp_des"
            android:textColor="@color/black"
            android:textSize="18sp">

        </com.application.smartstation.view.CustomTextViewBold>

        <com.application.smartstation.view.CustomTextViewBold
            android:id="@+id/txtDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:text="@string/save"
            android:layout_centerVertical="true"
            android:textColor="@color/color_green"
            android:textSize="16sp">

        </com.application.smartstation.view.CustomTextViewBold>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@color/viewgrey" />

    <com.application.smartstation.view.CustomEditText
        android:id="@+id/edtGrpDes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/add_desc_grp"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:gravity="start"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:minHeight="180dp"
        android:layout_marginEnd="8dp"
        android:singleLine="true"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/viewgrey"
        android:textCursorDrawable="@drawable/cusor_bg"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/viewgrey" />

    <com.application.smartstation.view.CustomTextViewBold
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="26dp"
        android:text="@string/des_grp_1"
        android:lineSpacingExtra="3dp"
        android:textColor="@color/grey"
        android:textSize="14sp">

    </com.application.smartstation.view.CustomTextViewBold>


</LinearLayout>