<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/login_bg"
    android:backgroundTint="@color/bg"
    android:orientation="vertical">

    <com.application.smartstation.view.CustomTextViewNormal
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:text="@string/you_entered_the_phn_number"
        android:textColor="@color/black"
        android:textSize="16sp">

    </com.application.smartstation.view.CustomTextViewNormal>

    <com.application.smartstation.view.CustomTextViewBold
        android:id="@+id/txtNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black"
        android:textSize="18sp">

    </com.application.smartstation.view.CustomTextViewBold>

    <com.application.smartstation.view.CustomTextViewNormal
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:text="@string/is_this_ok_or_would_you_like"
        android:textColor="@color/black"
        android:textSize="16sp">

    </com.application.smartstation.view.CustomTextViewNormal>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="26dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start">

            <com.application.smartstation.view.CustomTextViewBold
                android:id="@+id/txtEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textColor="@color/color_dark_green"
                android:textSize="16sp">

            </com.application.smartstation.view.CustomTextViewBold>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end">

            <com.application.smartstation.view.CustomTextViewBold
                android:id="@+id/txtOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:textColor="@color/color_dark_green"
                android:textSize="16sp">

            </com.application.smartstation.view.CustomTextViewBold>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>