<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imgBtn"
        android:background="@drawable/popup_bg"
        android:layout_marginTop="14dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <com.application.smartstation.view.CustomTextViewMedium
            android:id="@+id/txtAddContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/new_contact"
            >

        </com.application.smartstation.view.CustomTextViewMedium>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:visibility="gone"
            android:src="@drawable/dot_view_use"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            />

        <com.application.smartstation.view.CustomTextViewMedium
            android:id="@+id/txtNewGrp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/new_group"
            >

        </com.application.smartstation.view.CustomTextViewMedium>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:src="@drawable/dot_view_use"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            />

        <com.application.smartstation.view.CustomTextViewMedium
            android:id="@+id/txtStarMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/star_msg"
            >

        </com.application.smartstation.view.CustomTextViewMedium>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:src="@drawable/dot_view_use"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            />

        <com.application.smartstation.view.CustomTextViewMedium
            android:id="@+id/txtPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/payment"
            >

        </com.application.smartstation.view.CustomTextViewMedium>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:src="@drawable/dot_view_use"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            />

        <com.application.smartstation.view.CustomTextViewMedium
            android:id="@+id/txtSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/settings"
            >

        </com.application.smartstation.view.CustomTextViewMedium>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:src="@drawable/dot_view_use"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            />

        <com.application.smartstation.view.CustomTextViewMedium
            android:id="@+id/txtLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/logout"
            >

        </com.application.smartstation.view.CustomTextViewMedium>


    </LinearLayout>

    <ImageView
        android:id="@+id/imgBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_menu_logo_use"
        />

</RelativeLayout>