<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/chat_round_use"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:layout_height="wrap_content">

    <com.application.smartstation.view.CustomTextViewBold
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/logout_msg"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="18sp">

    </com.application.smartstation.view.CustomTextViewBold>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:src="@drawable/dot_view_use"
        app:tint="@color/color_settings_gray"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        android:gravity="center"
        >

        <com.application.smartstation.view.CustomTextViewBold
            android:id="@+id/txtYes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:textColor="@color/color_green"
            android:textAlignment="center"
            android:textSize="18sp">

        </com.application.smartstation.view.CustomTextViewBold>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:rotation="90"
            android:src="@drawable/dot_view_use"
            app:tint="@color/color_settings_gray"
            />

        <com.application.smartstation.view.CustomTextViewBold
            android:id="@+id/txtNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:textColor="@color/red"
            android:textAlignment="center"
            android:textSize="18sp">

        </com.application.smartstation.view.CustomTextViewBold>

    </LinearLayout>

</LinearLayout>